js262/test/language/module-code/parse-err-decl-pos-export-class-decl-method-gen.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

class C { *method() { export default null; } }
